plugins {
    id 'java'
    id 'maven-publish'
    id "com.diffplug.spotless" version "6.10.0"
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.7.1'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.4.2'
    implementation 'org.flywaydb:flyway-core:8.5.13'
    runtimeOnly 'org.postgresql:postgresql:42.2.18'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.6.28'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
}

group = 'com.serdeliverance'
version = '0.0.1-SNAPSHOT'
description = 'crypto-wallet'
java.sourceCompatibility = JavaVersion.VERSION_17
java.targetCompatibility = JavaVersion.VERSION_17

spotless {
    java {
        target(fileTree(rootDir) {
            include("src/**/*.java")
            exclude("src/jooq")
        })
        removeUnusedImports()
        googleJavaFormat("1.15.0")
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}